--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ nav ul {
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding: 0;
   margin: 0;
 }
@@ -43,5 +43,57 @@ nav img {
 }
 
 .section {
-  padding: 60px 10vw;
+  padding: 60px 20vw;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+  margin: 10px;
+}
+
+#hero {
+  background-color: #eee;
+}
+
+.special-img {
+  width: 100%;
+  height: 400px;
+}
+
+#testimonials {
+  background-color: #eee;
+}
+
+#testimonials .row {
+  justify-content: center;
+}
+
+.testi-img {
+  width: 300px;
+  height: 300px;
+  border-radius: 1%;
+  margin: 0 auto;
+}
+
+.bg-btn {
+  background-color: #000;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  color: #fff;
+  max-width: 40%;
 }
